Updated to full English. Changed button appearance and favicon.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Corn&#233; den Hollander</title>
 
-    <link rel="icon" type="image/png" sizes="160x160" max-age="604800" href="https://www.youngcapital.nl/yc-favicon-160x160.png">
+    <link rel="icon" type="image/png" sizes="160x160" max-age="604800" href="https://www.cornedenhollander.nl/img/ch-favicon.png">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
@@ -23,7 +23,7 @@
         <div class="container">
             
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Menu</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
                 <a class="navbar-brand page-scroll" href="#page-top"><b>Corn&#233;</b> den Hollander</a>
             </div>
 
@@ -46,9 +46,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 intro-text">
-                            <h1 class="wow fadeInDown">Hi, ik ben Corn&#233;</h1>
-                            <p class="wow fadeInRight" data-wow-delay="400ms">Ik ben beschikbaar als front-end development trainee.</p>
-                            <a href="#about" class="btn btn-custom btn-lg page-scroll wow fadeInUp" data-wow-delay="700ms">Leer mij kennen...</a>                            </div>
+                            <h1>Hi, I'm Corn&#233;</h1>
+                            <p>Technical consultant and Front-end developer.</p>
+                            <div class="div-about">
+                                <a href="#about" class="btn-white page-scroll">About me...</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -59,34 +62,37 @@
     <div id="about">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-md-4 vcenter wow fadeInRight">
+                <div class="col-xs-12 col-md-4 vcenter">
                     <div class="about-text">
-                        <h2>Wie is Corn&#233;</h2>
+                        <h2>A little about me</h2>
                         <hr>
-                        <p>Na een carriere bij de politie en een avontuur in het runnen van een eigen bedrijf is het voor mij
-                            tijd voor een volgende stap. Ik ben mijn hele leven al creatief bezig in vormgeving, video- en
-                            fotografie. Daarnaast heb ik het laatste jaar bij het Team High Tech Crime van de Landelijke
-                            Eenheid een passie voor development ontdekt. Ik houd ervan om technisch en uitdagend werk te
-                            doen. Daarom zou ik mij graag verder ontwikkelen als front-end developer.
+                        <p>After a career at the High Tech Crime Unit <i>(i.a.)</i> of the Dutch Police and running a video production company, 
+                            it was time for the next step. <a href="https://www.youngcapital.nl/"><b>YoungCapital</b></a> trained me to become 
+                            a Front-end Developer and <a href="https://klmitjobs.nl/"><b>KLM</b></a> gave me the opportunity to start working 
+                            as a Technical Consultant Trainee. They will accompany me in becoming a top notch hybrid web developer with a 
+                            creative twist and a love for open source.
+                            <br><br>    
+                            <b>Keywords:</b><br>
+                            Atlassian stack, Javascript, NPM, Ubuntu, OpenStack, Ansible, Git, Terraform, Docker, Concourse, and many more.
                         </p>
-                        <a href="#portfolio" class="btn btn-custom btn-lg page-scroll">Mijn portfolio</a> </div>
+                        <a href="#portfolio" class="btn btn-red page-scroll">Portfolio</a> </div>
                 </div>
-                <div class="col-xs-12 col-md-4 vcenter wow fadeInLeft"> <img src="img/profile.png" class="img-responsive" alt=""> </div>
-                <div class="col-xs-12 col-md-4 vcenter wow fadeInRight">
+                <div class="col-xs-12 col-md-4 vcenter"> <img src="img/profile.png" class="img-responsive" alt=""> </div>
+                <div class="col-xs-12 col-md-4 vcenter">
                     <div class="about-text">
-                        <h3>Analytisch</h3>
+                        <h3>Analytical</h3>
                         <hr>
-                        <p>Ontleden van componenten en de herkomst en samenhang daarvan inzien.</p>
+                        <p>I can decompose a problem and understand the origin and cohesion quickly.</p>
                     </div>
                     <div class="about-text">
-                        <h3>Doelgericht</h3>
+                        <h3>Purposeful</h3>
                         <hr>
-                        <p>Ondanks tegenslag kan ik mij goed blijven richten op het doel dat is gesteld.</p>
+                        <p>Despite setback(s) I'm able to stay focused on the target.</p>
                     </div>
                     <div class="about-text">
-                        <h3>Overtuigend</h3>
+                        <h3>Convincing</h3>
                         <hr>
-                        <p>Met een combinatie van enthousiasme, energie en creativiteit andere be&iuml;nvloeden.</p>
+                        <p>Influencing others with a combination of enthusiasm, energy and creativity.</p>
                     </div>
                 </div>
             </div>
@@ -96,18 +102,17 @@
     <div id="portfolio">
         <div class="container-fluid">
             <div class="section-title text-center center portfolio_text">
-                <h2 class="wow fadeInLeft">Portfolio</h2>
+                <h2>Portfolio</h2>
                 <hr>
-                <p class="wow fadeInRight">In het videoproductiebedrijf dat ik had, heb ik de afgelopen jaren met een aantal mooie opdrachtgevers mogen
-                    samenwerken om op creatief en technisch vlak het product te bereiken dat het verhaal van de klant optimaal
-                    vertelde. Een overzicht van de projecten van de afgelopen jaren:
+                <p>I’m building a portfolio right now. For an idea of what I can do technically, look at my <a href="https://github.com/cornedenhollander"><b>GitHub</b></a> page. 
+                    <br>For now, enjoy some of the work I’ve created in the video production company I had.
                 </p>
             </div>
             <div class="categories">
                 <ul class="cat">
                     <li>
-                        <ol class="type wow fadeInDown">
-                            <li class="col-4 btnCat"><a href="#" data-filter="*" class="active">Alles</a></li>
+                        <ol class="type">
+                            <li class="col-4 btnCat"><a href="#" data-filter="*" class="active">All</a></li>
                             <li class="col-4 btnCat"><a href="#" data-filter=".promo">Promo</a></li>
                             <li class="col-4 btnCat"><a href="#" data-filter=".interview">Interview</a></li>
                             <li class="col-4 btnCat"><a href="#" data-filter=".aftermovie">Aftermovie</a></li>
@@ -120,7 +125,7 @@
             <div class="row">
                 <div class="portfolio-items">
                     <div class="col-sm-6 col-md-4 col-lg-4 aftermovie">
-                        <div class="portfolio-item wow fadeInUp">
+                        <div class="portfolio-item">
                             <div class="hover-bg">
                                 <a href="https://vimeo.com/194391346" title="Aftermovie | Business course | Loyens & Loeff | Parijs" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
@@ -132,23 +137,23 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-4 promo">
-                        <div class="portfolio-item wow fadeInUp">
+                        <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="https://vimeo.com/157358388" title="PROMO | Nederlands Klarinetfestival 2016 - McDrive" data-lightbox-gallery="gallery1">
+                                <a href="https://vimeo.com/157358388" title="PROMO | Ducth Clarinetfestival 2016 - McDrive" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
-                                        <h4>Promo Nederlands Klarinetfestival</h4>
+                                        <h4>Promo Dutch Clarinetfestival</h4>
                                     </div>
-                                    <img src="img/promo_klarinet.jpg" class="img-responsive" alt="Promo Nederlands Klarinetfestival">
+                                    <img src="img/promo_klarinet.jpg" class="img-responsive" alt="Promo Dutch Clarinetfestival">
                                 </a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-4 promo">
-                        <div class="portfolio-item wow fadeInUp">
+                        <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="https://vimeo.com/172415397" title="Promo | Bij Moeders Mooiste - Meubelmakerij" data-lightbox-gallery="gallery1">
+                                <a href="https://vimeo.com/172415397" title="Promo | Bij Moeders Mooiste - Carpentry" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
-                                        <h4>Promo Bij Moeders Mooiste</h4>
+                                        <h4>Promo 'Bij Moeders Mooiste'</h4>
                                     </div>
                                     <img src="img/promo_moeders.jpg" class="img-responsive" alt="Promo Bij Moeders Mooiste">
                                 </a>
@@ -156,7 +161,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-4 interview">
-                        <div class="portfolio-item wow fadeInUp">
+                        <div class="portfolio-item">
                             <div class="hover-bg">
                                 <a href="https://vimeo.com/164073806" title="INTERVIEW | PINTA - Ellentine" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
@@ -168,9 +173,9 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-4 testimonial">
-                        <div class="portfolio-item wow fadeInUp">
+                        <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="https://vimeo.com/181170101" title="TESTIMONIAL | GSTALT | WK Dressuur Voor Jonge Paarden" data-lightbox-gallery="gallery1">
+                                <a href="https://vimeo.com/181170101" title="TESTIMONIAL | GSTALT | WK Dressage for young horses" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
                                         <h4>Testimonial Gstalt</h4>
                                     </div>
@@ -180,13 +185,13 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-4 garden">
-                        <div class="portfolio-item wow fadeInUp">
+                        <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="https://vimeo.com/169460546" title="Promo | Victor Verhuisdoos - Pot verhuizingen" data-lightbox-gallery="gallery1">
+                                <a href="https://vimeo.com/169460546" title="Promo | Victor Verhuisdoos - Pot Movingcompany" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
-                                        <h4>Promo POT Verhuizingen</h4>
+                                        <h4>Promo POT Movingcompany</h4>
                                     </div>
-                                    <img src="img/promo_pot.jpg" class="img-responsive" alt="Promo POT Verhuizingen">
+                                    <img src="img/promo_pot.jpg" class="img-responsive" alt="Promo POT Movingcompany">
                                 </a>
                             </div>
                         </div>
@@ -198,24 +203,24 @@
 
     <div id="quote-call" class="text-center">
         <div class="overlay">
-            <h2 class="wow fadeInLeft">Tips, kansen en/of ide&#235;en? Let's talk!</h2>
+            <h2>Tips, opportunities and/or ideas? Let's talk!</h2>
         </div>
     </div>
 
     <div id="contact" class="text-center" id='contact-hook'>
         <div class="container">
             <div class="section-title text-center">
-                <h2 class="wow fadeInLeft">Contact</h2>
+                <h2>Contact</h2>
                 <hr>
-                <p class="wow fadeInRight">Dit is het. Mijn verhaal. Nu is de vraag, kunt u mij een kans bieden? Dan zou ik heel graag van u horen.
-                    <br>Maar ook tips, ide&#235;en, of gewoon een "Hallo!" zijn altijd welkom!</p>
+                <p>This is it. You've seen who I am. Question is: What can I do for you?
+                    <br>I'm looking forward to hearing from you, even if for a simple "Hello!". </p>
             </div>
-            <div class="col-md-10 col-md-offset-1 wow fadeInUp">
+            <div class="col-md-10 col-md-offset-1">
                 <form name="sentMessage" id="contactForm" novalidate>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" id="name" class="form-control" placeholder="Naam" required="required">
+                                <input type="text" id="name" class="form-control" placeholder="Name" required="required">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -227,11 +232,11 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <textarea name="message" id="message" class="form-control" rows="4" placeholder="Bericht" required></textarea>
+                        <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
                         <p class="help-block text-danger"></p>
                     </div>
                     <div id="success"></div>
-                    <button type="submit" class="btn btn-custom btn-lg">Verstuur</button>
+                    <button type="submit" class="btn btn-red">Send</button>
                 </form>
             </div>
         </div>
@@ -239,11 +244,12 @@
 
     <div id="footer">
         <div class="container text-center">
-            <div class="col-md-8 col-md-offset-2 wow fadeInUp">
+            <div class="col-md-8 col-md-offset-2">
                 <div class="social">
                     <ul>
                         <li><a href="https://www.linkedin.com/in/cornedenhollander/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://twitter.com/cornedenh" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://github.com/cornedenhollander" target="_blank"><i class="fa fa-github"></i></a></li>
                     </ul>
                     <button onclick=topFunction() id="homeBtn" title="Go to top">^</button>
                 </div>
