Added google analytics.

--- a/index.html
+++ b/index.html
@@ -16,18 +16,28 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107299086-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+
+    gtag('config', 'UA-107299086-1');
+    </script>
+
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <nav id="menu" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-            
+
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Menu</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
                 <a class="navbar-brand page-scroll" href="#page-top"><b>Corn&#233;</b> den Hollander</a>
             </div>
 
-            
+
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#about" class="page-scroll">About</a></li>
@@ -66,12 +76,12 @@
                     <div class="about-text">
                         <h2>A little about me</h2>
                         <hr>
-                        <p>After a career at the High Tech Crime Unit <i>(i.a.)</i> of the Dutch Police and running a video production company, 
-                            it was time for the next step. <a href="https://www.youngcapital.nl/"><b>YoungCapital</b></a> trained me to become 
-                            a Front-end Developer and <a href="https://klmitjobs.nl/"><b>KLM</b></a> gave me the opportunity to start working 
-                            as a Technical Consultant Trainee. They will accompany me in becoming a top notch hybrid web developer with a 
+                        <p>After a career at the High Tech Crime Unit <i>(i.a.)</i> of the Dutch Police and running a video production company,
+                            it was time for the next step. <a href="https://www.youngcapital.nl/"><b>YoungCapital</b></a> trained me to become
+                            a Front-end Developer and <a href="https://klmitjobs.nl/"><b>KLM</b></a> gave me the opportunity to start working
+                            as a Technical Consultant Trainee. They will accompany me in becoming a top notch hybrid web developer with a
                             creative twist and a love for open source.
-                            <br><br>    
+                            <br><br>
                             <b>Keywords:</b><br>
                             Atlassian stack, Javascript, NPM, Ubuntu, OpenStack, Ansible, Git, Terraform, Docker, Concourse, and many more.
                         </p>
@@ -104,7 +114,7 @@
             <div class="section-title text-center center portfolio_text">
                 <h2>Portfolio</h2>
                 <hr>
-                <p>I’m building a portfolio right now. For an idea of what I can do technically, look at my <a href="https://github.com/cornedenhollander"><b>GitHub</b></a> page. 
+                <p>I’m building a portfolio right now. For an idea of what I can do technically, look at my <a href="https://github.com/cornedenhollander"><b>GitHub</b></a> page.
                     <br>For now, enjoy some of the work I’ve created in the video production company I had.
                 </p>
             </div>
