Simplified page-top button function. Updated large screen usability.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <div class="section-title text-center">
                 <h2>Contact</h2>
                 <hr>
-                <p>This is it. You've seen who I am. Question is: What can I do for you?
+                <p>This is it. You've seen a little of who I am. Question is: What can I do for you?
                     <br>I'm looking forward to hearing from you, even if for a simple "Hello!". </p>
             </div>
             <div class="col-md-10 col-md-offset-1">
@@ -261,7 +261,7 @@
                         <li><a href="https://twitter.com/cornedenh" target="_blank"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="https://github.com/cornedenhollander" target="_blank"><i class="fa fa-github"></i></a></li>
                     </ul>
-                    <button onclick=topFunction() id="homeBtn" title="Go to top">^</button>
+                    <a class="page-scroll" href="#page-top"><button id="homeBtn" title="Go to top">^</button></a>
                 </div>
                 <p>&copy; 2017 Corn&#233; den Hollander.</p>
             </div>
