Added blank targets for links, updated contact form to all english.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -77,8 +77,8 @@
                         <h2>A little about me</h2>
                         <hr>
                         <p>After a career at the High Tech Crime Unit <i>(i.a.)</i> of the Dutch Police and running a video production company,
-                            it was time for the next step. <a href="https://www.youngcapital.nl/"><b>YoungCapital</b></a> trained me to become
-                            a Front-end Developer and <a href="https://klmitjobs.nl/"><b>KLM</b></a> gave me the opportunity to start working
+                            it was time for the next step. <a href="https://www.youngcapital.nl/" target="_blank"><b>YoungCapital</b></a> trained me to become
+                            a Front-end Developer and <a href="https://klmitjobs.nl/" target="_blank"><b>KLM</b></a> gave me the opportunity to start working
                             as a Technical Consultant Trainee. They will accompany me in becoming a top notch hybrid web developer with a
                             creative twist and a love for open source.
                             <br><br>
