Updated github link to target blank.

--- a/index.max.html
+++ b/index.max.html
@@ -115,7 +115,7 @@
             <div class="section-title text-center center portfolio_text">
                 <h2>Portfolio</h2>
                 <hr>
-                <p>I’m building a portfolio right now. For an idea of what I can do technically, look at my <a href="https://github.com/cornedenhollander"><b>GitHub</b></a> page.
+                <p>I’m building a portfolio right now. For an idea of what I can do technically, look at my <a href="https://github.com/cornedenhollander" target="_blank"><b>GitHub</b></a> page.
                     <br>For now, enjoy some of the work I’ve created in the video production company I had.
                 </p>
             </div>
